# dynamic_module

./: .gitattributes  CMakeLists.txt  README.md  build.sh  kernel.lds  riscv.cmake
inc/: kernel_def.h
kernels/: CMakeLists.txt  kernel1.c  kernel2.c  kernel3.c  kernel4.c
riscv/: CMakeLists.txt
riscv/inc/: core_v5.h  interrupt.h  nds_intrinsic.h  riscv-csr.h  riscv-interrupts.h
riscv/src/: reset.c  start.S  start_up.c  trap.c  vector_table_baremetal.S
simulator/: funcsim.ini  funcsim_lin
src/: main.c
